--- a/css/style2.css
+++ b/css/style2.css
@@ -3,21 +3,28 @@ body
     background-image: url("../assets/images/pokedex_bg.gif");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 100% 100%;
+    background-size: 100%;
     
 }
 
+
 .result
 {
-    padding: 30px;
-    margin-top: 220px;
+    margin-top: 0px;
     margin-left: 200px;
+    margin-bottom: 150px;
 }
 
 .result-name {
     height: 100px;
     width: 100px;
-    
-    margin-top: 100px;
-    margin-left: 250px;
+    font-size: 100px; 
+    margin-bottom: 200px;
+    margin-left: 260px;
+    margin-top: 30px;
+}
+
+#pokeImage {
+    width: 300px;
+    height: 300px;
 }
