--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,7 @@ button span:before, button span:after
 }
 
 footer{
+    position: fixed;
     width: 100%;
     height: 60px;
     background: #333;
@@ -213,4 +214,5 @@ footer{
     position: absolute;
     bottom: 0;
   }
+
 
