--- a/css/style2.css
+++ b/css/style2.css
@@ -28,3 +28,13 @@ body
     width: 300px;
     height: 300px;
 }
+
+
+.chart div {
+    font: 10px sans-serif;
+    background-color:steelblue;
+    text-align: right;
+    padding: 3px;
+    margin: 1px;
+    color: white;
+  }
