upper/lower case conversions, working on linking both scripts to each others' variables, more pseudo-code

--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,15 @@ footer{
     bottom: 0;
 }
 
+/*graph for main page testing*/
+.chart div {
+    font: 10px sans-serif;
+    background-color:steelblue;
+    text-align: right;
+    padding: 3px;
+    margin: 1px;
+    color: white;
+  }
 
   @media only screen and (max-width: 568px){
       .jumbotron { 
