fixing my royal fuckup

--- a/css/style.css
+++ b/css/style.css
@@ -96,8 +96,8 @@ input[type="text"]::placeholder
     color: white;
     text-align: center;
     font-family: 'Press Start 2P', cursive;
-    font-size: 18px;
-    font-size: 1.2rem;
+    /* font-size: 18px;
+    font-size: 1.2rem; */
     
 }
 
