--- a/css/style2.css
+++ b/css/style2.css
@@ -1,6 +1,8 @@
 /*Changing from body element to .body2 class*/
 .body2
 {
+    width: 100%;
+    height: 100%;
     background-image: url("../assets/images/pokedex_bg.gif");
     background-repeat: no-repeat;
     background-position: center;
@@ -13,38 +15,65 @@
     margin: auto;
 }
 
-.result
-{ 
-    height: 400px;
-    position: static;
-
-}
-
 .result-name {
+    position: relative;
     width: 20%;
-    height: 20%;
+    height: 10%;
     font-family: 'Press Start 2P', cursive;
-    margin-left: 400px;
-    font-size: 40px;
+    left: 220px;
+    font-size: 80px;
+    bottom: 200px;
 }
 
 #pokeImage {
-    position: absolute;
+    position: relative;
     height: 40%;
     width: 30%;
     left: 200px;
-    top: 250px;
 }
 
+#background {
+    position: relative;
+    background: darkslategray;
+    width: 345px;
+    height: 250px;
+    left: 505px;
+    bottom: 52px;
+   
+}
 
-.chart div {
-    position: static;
-    font: 10px sans-serif;
+#attack {
     font-family: 'Press Start 2P', cursive;
-    background-color:steelblue;
-    padding: 3px;
     color: white;
-    margin-left: 1200px;
-    width: 50px;
-    height: 50px;
+    position: relative;
+    top: 45px;
+    left: 7px;
+    
+}
+#defense {
+    color: white;
+    font-family: 'Press Start 2P', cursive;
+    position: relative;
+    top: 110px;
+    right: 210px;
+} 
+
+#stamina {
+    color: white;
+    font-family: 'Press Start 2P', cursive;
+    position: relative;
+    top: 150px;
+    left: 10px;
+    
+}
+
+.chart div { 
+    position: relative;
+    font: 15px 'Press Start 2P', cursive;
+    font-family: 'Press Start 2P', cursive;
+    background-color:red;
+    color: white;
+    height: 25%;
+    left: 5px;
+    
   }
