--- a/css/style2.css
+++ b/css/style2.css
@@ -1,4 +1,96 @@
 /*Changing from body element to .body2 class*/
+@media only screen and (min-width: 320px) {
+     .body2 {
+    width: 100%;
+    height: 100%;
+    background-image: url("../assets/images/pokedex_bg.gif");
+    background-repeat: no-repeat;
+    background-size: 500px 684px;
+    }
+
+    
+    #backbtn {
+        width: 20%;
+        height: 5%;
+        margin: auto;
+        float: left;
+    }
+    .result-name {
+        position: relative;
+        width: 20%;
+        height: 10%;
+        font-family: 'Press Start 2P', cursive;
+        font-size: 30px;
+        left: 70px;
+        top: 40px;
+    }
+
+    #pokeImage {
+        position: relative; 
+        left: 70px;
+        top: 80px;
+        height: 140%;
+        width: 140%;
+    }
+
+    .result {
+        position: relative; 
+        top: 0px;
+        left: 0px;
+        width: 50%;
+        height: 30%;
+        margin: 10px;
+    }
+
+
+
+
+#attack {
+    font-family: 'Press Start 2P', cursive;
+    color: black;
+    position: relative;
+    font-size: 10px;
+    left: 5px;
+    top: 185px;
+}
+
+#defense {
+    font-family: 'Press Start 2P', cursive;
+    color: black;
+    position: relative; 
+    font-size: 10px;
+    top: 205px;
+    right: 150px;
+}
+
+#stamina {
+    font-family: 'Press Start 2P', cursive;
+    color: black;
+    position: relative;
+    font-size: 10px;
+    top: 225px;
+    right: 230px;
+}
+
+.chart div { 
+    position: relative;
+    font: 15px 'Press Start 2P', cursive;
+    font-family: 'Press Start 2P', cursive;
+    background-color: steelblue;
+    color: white;
+    left: 90px;
+    top: 160px;
+    max-width: 200px;
+    
+  }
+
+
+}
+
+    
+
+
+@media only screen and (min-width: 1024px) {
 .body2
 {
     width: 100%;
@@ -20,24 +112,23 @@
     width: 20%;
     height: 10%;
     font-family: 'Press Start 2P', cursive;
-    left: 220px;
+    left: 180px;
     font-size: 80px;
-    bottom: 200px;
+    bottom: 250px;
 }
 
 .result {
     position: relative; 
     height: 400px;
     width: 400px;
+    top: 100px;
     bottom: 600px;
-    left: 300px;
+    left: 200px;
 }
 #pokeImage {
     
     height: 100%;
     width: 100%;
-  
-    
 }
 
 #background {
@@ -46,7 +137,7 @@
     width: 345px;
     height: 250px;
     left: 505px;
-    bottom: 52px;
+    bottom: 470px;
    
 }
 
@@ -62,16 +153,16 @@
     color: white;
     font-family: 'Press Start 2P', cursive;
     position: relative;
-    top: 110px;
-    right: 210px;
+    top: 105px;
+    right: 170px;
 } 
 
 #stamina {
     color: white;
     font-family: 'Press Start 2P', cursive;
     position: relative;
-    top: 150px;
-    left: 10px;
+    top: 170px;
+    right: 250px;
     
 }
 
@@ -82,6 +173,17 @@
     background-color: darkgrey;
     color: white;
     height: 25%;
-    left: 5px;
-    max-width: 200px;
+    left: 100px;
+    bottom: 1500px;
+    max-width: 230px;
+    top: 0px;
   }
+
+}
+
+ 
+
+
+
+
+
